[CET] 01_02: start notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -46,6 +46,9 @@ Functions and Models
 <li>
 <a href="01_01.html">Four Ways to Represent a Function</a>
 
+</li><li>
+<a href="01_02.html">Mathematical Models: A Catalog of Essential Functions</a>
+
 </li></ol>
 </li></ol>
 </div>
