--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -82,12 +82,27 @@
 </li><li>
 <a href="abpci.html#The%20Grand%20Staff">The Grand Staff</a>
 
+</li><li>
+<a href="abpci.html#Slur%20and%20Legato%20Playing">Slur and Legato Playing</a>
+
+</li><li>
+<a href="abpci.html#Incomplete%20Measure">Incomplete Measure</a>
+
+</li><li>
+<a href="abpci.html#The%20Sharp%20Sign">The Sharp Sign</a>
+
 </li></ul>
 </li><li>
 <a href="abpci.html#Intervals">Intervals</a>
 
 <ul>
 <li>
+<a href="abpci.html#Melodic%20Interval">Melodic Interval</a>
+
+</li><li>
+<a href="abpci.html#Harmonic%20Interval">Harmonic Interval</a>
+
+</li><li>
 <a href="abpci.html#Melodic%20Intervals%20in%20C%20Position">Melodic Intervals in C Position</a>
 
 </li><li>
@@ -104,10 +119,7 @@
 <a href="abpci.html#Chords">Chords</a>
 
 </li><li>
-<a href="abpci.html#Slur%20and%20Legato%20Playing">Slur and Legato Playing</a>
-
-</li><li>
-<a href="abpci.html#Incomplete%20Measure">Incomplete Measure</a>
+<a href="abpci.html#Chords%20in%20C%20Position">Chords in C Position</a>
 
 </li></ul>
 <hr>
@@ -294,17 +306,63 @@ The bass staff and the treble staff, when joined together with a brace, make up 
 <img src="https://albamr09.github.io/public/assets/grand_staff.png" alt="Grand Staff" style="width:800px;">
 </p>
 
+<div id="Alfred Basic Piano Course I-Notation-Slur and Legato Playing"><h3 id="Slur and Legato Playing" class="header"><a href="#Alfred Basic Piano Course I-Notation-Slur and Legato Playing">Slur and Legato Playing</a></h3></div>
+
+<p>
+A <span id="Alfred Basic Piano Course I-Notation-Slur and Legato Playing-slur"></span><strong id="slur">slur</strong> is a curved line over or under notes on <span id="Alfred Basic Piano Course I-Notation-Slur and Legato Playing-different"></span><strong id="different">different</strong> lines or spaces. Slurs means play <span id="Alfred Basic Piano Course I-Notation-Slur and Legato Playing-legato"></span><strong id="legato">legato</strong> (smoothly connected), they often divide the music intro phrases (a musical thougth or sentence).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/slur.png" alt="Slur">
+</p>
+
+<div id="Alfred Basic Piano Course I-Notation-Incomplete Measure"><h3 id="Incomplete Measure" class="header"><a href="#Alfred Basic Piano Course I-Notation-Incomplete Measure">Incomplete Measure</a></h3></div>
+
+<p>
+Some pieces begin with an <span id="Alfred Basic Piano Course I-Notation-Incomplete Measure-incomplete measure"></span><strong id="incomplete measure">incomplete measure</strong>, that is it has one missing count:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/incomplete_measure.png" alt="Incomplete Measure">
+</p>
+
+<div id="Alfred Basic Piano Course I-Notation-The Sharp Sign"><h3 id="The Sharp Sign" class="header"><a href="#Alfred Basic Piano Course I-Notation-The Sharp Sign">The Sharp Sign</a></h3></div>
+
+<p>
+The <span id="Alfred Basic Piano Course I-Notation-The Sharp Sign-sharp sign"></span><strong id="sharp sign">sharp sign</strong> before a note means to play the next key to the right (wether black or white).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/sharp_sign.png" alt="Sharp Sign">
+</p>
+
+<p>
+When a <span id="Alfred Basic Piano Course I-Notation-The Sharp Sign-sharp"></span><strong id="sharp">sharp</strong> appears before a note, it applies to that note for the rest of measure:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/sharp_sign_score.png" alt="Sharp Sign on a Score">
+</p>
+
 <div id="Alfred Basic Piano Course I-Intervals"><h2 id="Intervals" class="header"><a href="#Alfred Basic Piano Course I-Intervals">Intervals</a></h2></div>
 
+<div id="Alfred Basic Piano Course I-Intervals-Melodic Interval"><h3 id="Melodic Interval" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Interval">Melodic Interval</a></h3></div>
+
+<p>
+Distances between tones are measured in <span id="Alfred Basic Piano Course I-Intervals-Melodic Interval-intervals"></span><strong id="intervals">intervals</strong>, called \(2\)nds, \(3\)rds, \(4\)ths, \(5\)ths, etc.
+</p>
+
+<p>
+Notes playes separately make a <span id="Alfred Basic Piano Course I-Intervals-Melodic Interval-melody"></span><strong id="melody">melody</strong>, and we call the intervals between these notes <span id="Alfred Basic Piano Course I-Intervals-Melodic Interval-melodic intervals"></span><strong id="melodic intervals">melodic intervals</strong>.
+</p>
+
+<div id="Alfred Basic Piano Course I-Intervals-Harmonic Interval"><h3 id="Harmonic Interval" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Harmonic Interval">Harmonic Interval</a></h3></div>
+
+<p>
+Notes played together make <span id="Alfred Basic Piano Course I-Intervals-Harmonic Interval-harmony"></span><strong id="harmony">harmony</strong>. We call the intervals between these notes <span id="Alfred Basic Piano Course I-Intervals-Harmonic Interval-harmonic intervals"></span><strong id="harmonic intervals">harmonic intervals</strong>.
+</p>
+
 <div id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in C Position"><h3 id="Melodic Intervals in C Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Intervals in C Position">Melodic Intervals in C Position</a></h3></div>
-
-<p>
-Distances between tones are measured in <span id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in C Position-intervals"></span><strong id="intervals">intervals</strong>, called \(2\)nds, \(3\)rds, \(4\)ths, \(5\)ths, etc.
-</p>
-
-<p>
-Notes playes separately make a <span id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in C Position-melody"></span><strong id="melody">melody</strong>, and we call the intervals between these notes <span id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in C Position-melodic intervals"></span><strong id="melodic intervals">melodic intervals</strong>.
-</p>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/melodic_intervals.png" alt="Melodic Intervals">
@@ -313,25 +371,31 @@ Notes playes separately make a <span id="Alfred Basic Piano Course I-Intervals-M
 <div id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in C Position"><h3 id="Harmonic Intervals in C Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Harmonic Intervals in C Position">Harmonic Intervals in C Position</a></h3></div>
 
 <p>
-Notes played together make <span id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in C Position-harmony"></span><strong id="harmony">harmony</strong>. We call the intervals between these notes <span id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in C Position-harmonic intervals"></span><strong id="harmonic intervals">harmonic intervals</strong>.
-</p>
-
-<p>
 <img src="https://albamr09.github.io/public/assets/harmonic_intervals.png" alt="Harmonic Intervals">
 </p>
 
 <div id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in G Position"><h3 id="Melodic Intervals in G Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Intervals in G Position">Melodic Intervals in G Position</a></h3></div>
 
+<p>
+<img src="https://albamr09.github.io/public/assets/melodic_invtervals_g.png" alt="Melodic Intervals in G Position">
+</p>
+
 <div id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in G Position"><h3 id="Harmonic Intervals in G Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Harmonic Intervals in G Position">Harmonic Intervals in G Position</a></h3></div>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/harmonic_invtervals_g.png" alt="Harmonic Intervals in G Position">
+</p>
 
 <div id="Alfred Basic Piano Course I-Chords"><h2 id="Chords" class="header"><a href="#Alfred Basic Piano Course I-Chords">Chords</a></h2></div>
 
+<div id="Alfred Basic Piano Course I-Chords in C Position"><h2 id="Chords in C Position" class="header"><a href="#Alfred Basic Piano Course I-Chords in C Position">Chords in C Position</a></h2></div>
+
 <p>
-A <span id="Alfred Basic Piano Course I-Chords-chord"></span><strong id="chord">chord</strong> is three or more notes played together. 
+A <span id="Alfred Basic Piano Course I-Chords in C Position-chord"></span><strong id="chord">chord</strong> is three or more notes played together. 
 </p>
 
 <p>
-The <span id="Alfred Basic Piano Course I-Chords-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-Chords-Sol"></span><strong id="Sol">Sol</strong>.
+The <span id="Alfred Basic Piano Course I-Chords in C Position-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords in C Position-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords in C Position-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-Chords in C Position-Sol"></span><strong id="Sol">Sol</strong>.
 </p>
 
 <p>
@@ -339,7 +403,7 @@ The <span id="Alfred Basic Piano Course I-Chords-Do Major Chord"></span><strong 
 </p>
 
 <p>
-The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Chords-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-Sol"></span><strong id="Sol">Sol</strong>.
+The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Chords in C Position-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Chords in C Position-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords in C Position-Sol"></span><strong id="Sol">Sol</strong>.
 </p>
 
 <p>
@@ -347,31 +411,11 @@ The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Pian
 </p>
 
 <p>
-The <span id="Alfred Basic Piano Course I-Chords-Fa Major Chord"></span><strong id="Fa Major Chord">Fa Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-La"></span><strong id="La">La</strong>.
+The <span id="Alfred Basic Piano Course I-Chords in C Position-Fa Major Chord"></span><strong id="Fa Major Chord">Fa Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords in C Position-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords in C Position-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords in C Position-La"></span><strong id="La">La</strong>.
 </p>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/fa_major_chord.png" alt="The Fa Major Chord">
-</p>
-
-<div id="Alfred Basic Piano Course I-Slur and Legato Playing"><h2 id="Slur and Legato Playing" class="header"><a href="#Alfred Basic Piano Course I-Slur and Legato Playing">Slur and Legato Playing</a></h2></div>
-
-<p>
-A <span id="Alfred Basic Piano Course I-Slur and Legato Playing-slur"></span><strong id="slur">slur</strong> is a curved line over or under notes on <span id="Alfred Basic Piano Course I-Slur and Legato Playing-different"></span><strong id="different">different</strong> lines or spaces. Slurs means play <span id="Alfred Basic Piano Course I-Slur and Legato Playing-legato"></span><strong id="legato">legato</strong> (smoothly connected), they often divide the music intro phrases (a musical thougth or sentence).
-</p>
-
-<p>
-<img src="https://albamr09.github.io/public/assets/slur.png" alt="Slur">
-</p>
-
-<div id="Alfred Basic Piano Course I-Incomplete Measure"><h2 id="Incomplete Measure" class="header"><a href="#Alfred Basic Piano Course I-Incomplete Measure">Incomplete Measure</a></h2></div>
-
-<p>
-Some pieces begin with an <span id="Alfred Basic Piano Course I-Incomplete Measure-incomplete measure"></span><strong id="incomplete measure">incomplete measure</strong>, that is it has one missing count:
-</p>
-
-<p>
-<img src="https://albamr09.github.io/public/assets/incomplete_measure.png" alt="Incomplete Measure">
 </p>
 </div>
   
