[CET] 01_02: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/01_02.html
+++ b/src/Notes/Math/Calculus/CET/01_02.html
@@ -44,6 +44,9 @@
 <a href="01_02.html#Mathematical%20Model">Mathematical Model</a>
 
 </li><li>
+<a href="01_02.html#Algebraic%20Function">Algebraic Function</a>
+
+</li><li>
 <a href="01_02.html#Faimilies%20of%20Essential%20Functions%20and%20Their%20Graphs">Faimilies of Essential Functions and Their Graphs</a>
 
 </li></ul>
@@ -85,7 +88,21 @@ This process is illustrated on the following figure.
 If there is no physical law or principle to help us formulate a model, we construct an <span id="Mathematical Models: A Catalog of Essential Functions-Mathematical Model-empirical model"></span><strong id="empirical model">empirical model</strong> that is a model that captures the basic trend of the data points.
 </p>
 
+<div id="Mathematical Models: A Catalog of Essential Functions-Algebraic Function"><h2 id="Algebraic Function" class="header"><a href="#Mathematical Models: A Catalog of Essential Functions-Algebraic Function">Algebraic Function</a></h2></div>
+
+<p>
+A function \(f\) is an <span id="Mathematical Models: A Catalog of Essential Functions-Algebraic Function-algebraic function"></span><strong id="algebraic function">algebraic function</strong> if it can be constructed using algebraic operations (such as addition, substraction, multiplication, division and taking roots).
+</p>
+
+<p>
+Functions that are not algebraic are called <span id="Mathematical Models: A Catalog of Essential Functions-Algebraic Function-transcendental"></span><strong id="transcendental">transcendental</strong>, these include trigonometric, exponential and logarithmic functions.
+</p>
+
 <div id="Mathematical Models: A Catalog of Essential Functions-Faimilies of Essential Functions and Their Graphs"><h2 id="Faimilies of Essential Functions and Their Graphs" class="header"><a href="#Mathematical Models: A Catalog of Essential Functions-Faimilies of Essential Functions and Their Graphs">Faimilies of Essential Functions and Their Graphs</a></h2></div>
+
+<p>
+On the following table we show a summary of graphs of some families of essential functions.
+</p>
 <table>
 <thead>
 <tr>
