[CET] 01_02: fix typos [skip ci]

--- a/src/Notes/Math/Calculus/CET/01_02.html
+++ b/src/Notes/Math/Calculus/CET/01_02.html
@@ -64,13 +64,13 @@ The process of mathematical modeling is a follows:
 
 <ol>
 <li>
-Formulate a mathematical models by identifying the independent and dependent variables and making assumptions that simplify the phenomenon.
+Formulate a mathematical model by identifying the independent and dependent variables and making assumptions that simplify the phenomenon.
 
 </li><li>
 Apply the mathematics that we know to derive mathematical conclusions.
 
 </li><li>
-Take those mathematics conslucions and interpret them as information about the original real-world phenomenon.
+Take those mathematics conclusions and interpret them as information about the original real-world phenomenon.
 
 </li><li>
 Test our predictions against real-world data.
