[ABPC]: continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -118,9 +118,30 @@
 </li><li>
 <a href="abpci.html#Chords">Chords</a>
 
-</li><li>
+<ul>
+<li>
 <a href="abpci.html#Chords%20in%20C%20Position">Chords in C Position</a>
 
+<ul>
+<li>
+<a href="abpci.html#Do%20Major">Do Major</a>
+
+</li><li>
+<a href="abpci.html#Sol7">Sol7</a>
+
+</li><li>
+<a href="abpci.html#Fa%20Major">Fa Major</a>
+
+</li></ul>
+</li><li>
+<a href="abpci.html#Chords%20in%20G%20Position">Chords in G Position</a>
+
+<ul>
+<li>
+<a href="abpci.html#G%20Major">G Major</a>
+
+</li></ul>
+</li></ul>
 </li></ul>
 <hr>
 
@@ -388,14 +409,16 @@ Notes played together make <span id="Alfred Basic Piano Course I-Intervals-Harmo
 
 <div id="Alfred Basic Piano Course I-Chords"><h2 id="Chords" class="header"><a href="#Alfred Basic Piano Course I-Chords">Chords</a></h2></div>
 
-<div id="Alfred Basic Piano Course I-Chords in C Position"><h2 id="Chords in C Position" class="header"><a href="#Alfred Basic Piano Course I-Chords in C Position">Chords in C Position</a></h2></div>
-
 <p>
-A <span id="Alfred Basic Piano Course I-Chords in C Position-chord"></span><strong id="chord">chord</strong> is three or more notes played together. 
+A <span id="Alfred Basic Piano Course I-Chords-chord"></span><strong id="chord">chord</strong> is three or more notes played together. 
 </p>
 
+<div id="Alfred Basic Piano Course I-Chords-Chords in C Position"><h3 id="Chords in C Position" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position">Chords in C Position</a></h3></div>
+
+<div id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major"><h4 id="Do Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major">Do Major</a></h4></div>
+
 <p>
-The <span id="Alfred Basic Piano Course I-Chords in C Position-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords in C Position-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords in C Position-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-Chords in C Position-Sol"></span><strong id="Sol">Sol</strong>.
+The <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Sol"></span><strong id="Sol">Sol</strong>.
 </p>
 
 <p>
@@ -403,19 +426,31 @@ The <span id="Alfred Basic Piano Course I-Chords in C Position-Do Major Chord"><
 </p>
 
 <p>
-The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Chords in C Position-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Chords in C Position-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords in C Position-Sol"></span><strong id="Sol">Sol</strong>.
+The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Sol"></span><strong id="Sol">Sol</strong>.
 </p>
+
+<div id="Alfred Basic Piano Course I-Chords-Chords in C Position-Sol7"><h4 id="Sol7" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position-Sol7">Sol7</a></h4></div>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/sol_7_chord.png" alt="The Sol7 Chord">
 </p>
 
+<div id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major"><h4 id="Fa Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major">Fa Major</a></h4></div>
+
 <p>
-The <span id="Alfred Basic Piano Course I-Chords in C Position-Fa Major Chord"></span><strong id="Fa Major Chord">Fa Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords in C Position-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords in C Position-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords in C Position-La"></span><strong id="La">La</strong>.
+The <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-Fa Major Chord"></span><strong id="Fa Major Chord">Fa Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-La"></span><strong id="La">La</strong>.
 </p>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/fa_major_chord.png" alt="The Fa Major Chord">
+</p>
+
+<div id="Alfred Basic Piano Course I-Chords-Chords in G Position"><h3 id="Chords in G Position" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in G Position">Chords in G Position</a></h3></div>
+
+<div id="Alfred Basic Piano Course I-Chords-Chords in G Position-G Major"><h4 id="G Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in G Position-G Major">G Major</a></h4></div>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/g_major_chord.png" alt="The G Major Chord">
 </p>
 </div>
   
