--- a/src/Notes/Math/Calculus/CET/01_03.html
+++ b/src/Notes/Math/Calculus/CET/01_03.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
-    <title>Calculus Ealy Transcendentals</title>
+    <title>New Functions from Old Functions</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,29 +31,28 @@
     <hr>
     <div class="content">
 <p>
-<a href="../../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="Calculus Ealy Transcendentals"><h1 id="Calculus Ealy Transcendentals" class="header"><a href="#Calculus Ealy Transcendentals">Calculus Ealy Transcendentals</a></h1></div>
+<div id="New Functions from Old Functions"><h1 id="New Functions from Old Functions" class="header"><a href="#New Functions from Old Functions">New Functions from Old Functions</a></h1></div>
 
 <hr>
- 
-<ol>
-<li>
-Functions and Models
 
-<ol>
+<p>
+See the following for the theory on function transformations:
+</p>
+
+<ul>
 <li>
-<a href="01_01.html">Four Ways to Represent a Function</a>
+<a href="../../Pre-Calculus/AGAA/02_02.html">Vertical and Horizontal Shifts of Graphs</a>
 
 </li><li>
-<a href="01_02.html">Mathematical Models: A Catalog of Essential Functions</a>
+<a href="../../Pre-Calculus/AGAA/02_03.html">Stretching, Shrinking and Reflecting Graphs</a>
 
-</li><li>
-<a href="01_03.html">New Functions from Old Functions</a>
-
-</li></ol>
-</li></ol>
+</li></ul>
+<p>
+And for more information on <a href="../../Pre-Calculus/AGAA/02_06.html">Operations and Composition</a>.
+</p>
 </div>
   
 
