[ABCPI] Continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -134,11 +134,17 @@
 
 </li></ul>
 </li><li>
-<a href="abpci.html#Chords%20in%20G%20Position">Chords in G Position</a>
+<a href="abpci.html#Chords%20in%20Sol%20Position">Chords in Sol Position</a>
 
 <ul>
 <li>
-<a href="abpci.html#G%20Major">G Major</a>
+<a href="abpci.html#Sol%20Major">Sol Major</a>
+
+</li><li>
+<a href="abpci.html#Re7">Re7</a>
+
+</li><li>
+<a href="abpci.html#Do%20Major">Do Major</a>
 
 </li></ul>
 </li></ul>
@@ -445,13 +451,37 @@ The <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-F
 <img src="https://albamr09.github.io/public/assets/fa_major_chord.png" alt="The Fa Major Chord">
 </p>
 
-<div id="Alfred Basic Piano Course I-Chords-Chords in G Position"><h3 id="Chords in G Position" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in G Position">Chords in G Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Chords-Chords in Sol Position"><h3 id="Chords in Sol Position" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Sol Position">Chords in Sol Position</a></h3></div>
 
-<div id="Alfred Basic Piano Course I-Chords-Chords in G Position-G Major"><h4 id="G Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in G Position-G Major">G Major</a></h4></div>
+<div id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Sol Major"><h4 id="Sol Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Sol Position-Sol Major">Sol Major</a></h4></div>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/g_major_chord.png" alt="The G Major Chord">
 </p>
+
+<div id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Re7"><h4 id="Re7" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Sol Position-Re7">Re7</a></h4></div>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/re7_chord.png" alt="The Re 7 Major Chord">
+</p>
+
+<div id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Do Major"><h4 id="Do Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Sol Position-Do Major">Do Major</a></h4></div>
+
+<p>
+We know that the Do is composed of the following notes: Do, Mi, Sol. When you play the same notes of a chord in a different order, it’s still the same chord, but in what’s called an <span id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Do Major-inversion"></span><strong id="inversion">inversion</strong>. For example:
+</p>
+
+<ul>
+<li>
+Root position of the Do major chord: Do (root), Mi, Sol.
+
+</li><li>
+First inversion: Mi, Sol, Do (E is the lowest note).
+
+</li><li>
+Second inversion: Sol, Do, Mi (G is the lowest note).
+
+</li></ul>
 </div>
   
 
