[ABCPI] Continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -468,7 +468,7 @@ The <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-F
 <div id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Do Major"><h4 id="Do Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Sol Position-Do Major">Do Major</a></h4></div>
 
 <p>
-We know that the Do is composed of the following notes: Do, Mi, Sol. When you play the same notes of a chord in a different order, it’s still the same chord, but in what’s called an <span id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Do Major-inversion"></span><strong id="inversion">inversion</strong>. For example:
+We know that the Do Major is composed of the following notes: Do, Mi, Sol. When you play the same notes of a chord in a different order, it’s still the same chord, but in what’s called an <span id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Do Major-inversion"></span><strong id="inversion">inversion</strong>. For example:
 </p>
 
 <ul>
@@ -482,6 +482,9 @@ First inversion: Mi, Sol, Do (E is the lowest note).
 Second inversion: Sol, Do, Mi (G is the lowest note).
 
 </li></ul>
+<p>
+<img src="https://albamr09.github.io/public/assets/c_major_g.png" alt="The C Major Chord on G Position">
+</p>
 </div>
   
 
