--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -44,18 +44,18 @@
 <a href="abpci.html#Keys">Keys</a>
 
 </li><li>
-<a href="abpci.html#C%20Position">C Position</a>
+<a href="abpci.html#Do%20Position">Do Position</a>
 
 <ul>
 <li>
-<a href="abpci.html#Right%20Hand%20C%20Position">Right Hand C Position</a>
+<a href="abpci.html#Right%20Hand%20Do%20Position">Right Hand Do Position</a>
 
 </li><li>
-<a href="abpci.html#Left%20Hand%20C%20Position">Left Hand C Position</a>
+<a href="abpci.html#Left%20Hand%20Do%20Position">Left Hand Do Position</a>
 
 </li></ul>
 </li><li>
-<a href="abpci.html#G%20Position">G Position</a>
+<a href="abpci.html#Sol%20Position">Sol Position</a>
 
 </li><li>
 <a href="abpci.html#Notation">Notation</a>
@@ -103,16 +103,16 @@
 <a href="abpci.html#Harmonic%20Interval">Harmonic Interval</a>
 
 </li><li>
-<a href="abpci.html#Melodic%20Intervals%20in%20C%20Position">Melodic Intervals in C Position</a>
+<a href="abpci.html#Melodic%20Intervals%20in%20Do%20Position">Melodic Intervals in Do Position</a>
 
 </li><li>
-<a href="abpci.html#Harmonic%20Intervals%20in%20C%20Position">Harmonic Intervals in C Position</a>
+<a href="abpci.html#Harmonic%20Intervals%20in%20Do%20Position">Harmonic Intervals in Do Position</a>
 
 </li><li>
-<a href="abpci.html#Melodic%20Intervals%20in%20G%20Position">Melodic Intervals in G Position</a>
+<a href="abpci.html#Melodic%20Intervals%20in%20Sol%20Position">Melodic Intervals in Sol Position</a>
 
 </li><li>
-<a href="abpci.html#Harmonic%20Intervals%20in%20G%20Position">Harmonic Intervals in G Position</a>
+<a href="abpci.html#Harmonic%20Intervals%20in%20Sol%20Position">Harmonic Intervals in Sol Position</a>
 
 </li></ul>
 </li><li>
@@ -120,7 +120,7 @@
 
 <ul>
 <li>
-<a href="abpci.html#Chords%20in%20C%20Position">Chords in C Position</a>
+<a href="abpci.html#Chords%20in%20Do%20Position">Chords in Do Position</a>
 
 <ul>
 <li>
@@ -165,28 +165,28 @@ Piano keys are named as follows:
 The lowest key on a \(88\) key piano is <span id="Alfred Basic Piano Course I-Keys-La"></span><strong id="La">La</strong>. The <span id="Alfred Basic Piano Course I-Keys-Do"></span><strong id="Do">Do</strong> nearest the middle of the piano is called <span id="Alfred Basic Piano Course I-Keys-Middle Do"></span><strong id="Middle Do">Middle Do</strong>.
 </p>
 
-<div id="Alfred Basic Piano Course I-C Position"><h2 id="C Position" class="header"><a href="#Alfred Basic Piano Course I-C Position">C Position</a></h2></div>
+<div id="Alfred Basic Piano Course I-Do Position"><h2 id="Do Position" class="header"><a href="#Alfred Basic Piano Course I-Do Position">Do Position</a></h2></div>
 
-<div id="Alfred Basic Piano Course I-C Position-Right Hand C Position"><h3 id="Right Hand C Position" class="header"><a href="#Alfred Basic Piano Course I-C Position-Right Hand C Position">Right Hand C Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position"><h3 id="Right Hand Do Position" class="header"><a href="#Alfred Basic Piano Course I-Do Position-Right Hand Do Position">Right Hand Do Position</a></h3></div>
 
 <p>
-Place the right hand on the keyboard so that the <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-1st finger"></span><strong id="1st finger">1st finger</strong> falls on <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-Middle Do"></span><strong id="Middle Do">Middle Do</strong>. The \(4\) remaining fingers fall naturally on the next \(4\) white keys:
+Place the right hand on the keyboard so that the <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-1st finger"></span><strong id="1st finger">1st finger</strong> falls on <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-Middle Do"></span><strong id="Middle Do">Middle Do</strong>. The \(4\) remaining fingers fall naturally on the next \(4\) white keys:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/right_hand_c_position.png" alt="Right Hand C Position" style="width:700px;">
+<img src="https://albamr09.github.io/public/assets/right_hand_c_position.png" alt="Right Hand Do Position" style="width:700px;">
 </p>
 
 <p>
-The names of the \(5\) keys are: <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-do"></span><strong id="do">do</strong>, <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-re"></span><strong id="re">re</strong>, <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-mi"></span><strong id="mi">mi</strong>, <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-fa"></span><strong id="fa">fa</strong>, <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-sol"></span><strong id="sol">sol</strong>.
+The names of the \(5\) keys are: <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-do"></span><strong id="do">do</strong>, <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-re"></span><strong id="re">re</strong>, <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-mi"></span><strong id="mi">mi</strong>, <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-fa"></span><strong id="fa">fa</strong>, <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-sol"></span><strong id="sol">sol</strong>.
 </p>
 
 <p>
-Notes for this position are writter on the <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-trebble staff"></span><strong id="trebble staff">trebble staff</strong>. See the following figure:
+Notes for this position are writter on the <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-trebble staff"></span><strong id="trebble staff">trebble staff</strong>. See the following figure:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/right_hand_c_position_score.png" alt="Right Hand C Position Score" style="width:500px;">
+<img src="https://albamr09.github.io/public/assets/right_hand_c_position_score.png" alt="Right Hand Do Position Score" style="width:500px;">
 </p>
 
 <p>
@@ -194,35 +194,35 @@ The treble clef sign is used for right hand notes.
 </p>
 
 <p>
-We see that middle do is writter on a short line below the staff, which is called a <span id="Alfred Basic Piano Course I-C Position-Right Hand C Position-leger line"></span><strong id="leger line">leger line</strong>.
+We see that middle do is writter on a short line below the staff, which is called a <span id="Alfred Basic Piano Course I-Do Position-Right Hand Do Position-leger line"></span><strong id="leger line">leger line</strong>.
 </p>
 
-<div id="Alfred Basic Piano Course I-C Position-Left Hand C Position"><h3 id="Left Hand C Position" class="header"><a href="#Alfred Basic Piano Course I-C Position-Left Hand C Position">Left Hand C Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Do Position-Left Hand Do Position"><h3 id="Left Hand Do Position" class="header"><a href="#Alfred Basic Piano Course I-Do Position-Left Hand Do Position">Left Hand Do Position</a></h3></div>
 
 <p>
 This position is obtained by moving the left hand so that the \(5\)th finger falls on the Do below the middle Do. The remaning \(4\) fingers fall naturally on the next \(4\) white keys.
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/left_hand_c_position.png" alt="Left Hand C Position" style="width:700px;">
+<img src="https://albamr09.github.io/public/assets/left_hand_c_position.png" alt="Left Hand Do Position" style="width:700px;">
 </p>
 
 <p>
-Notes for this position are writter on the <span id="Alfred Basic Piano Course I-C Position-Left Hand C Position-bass staff"></span><strong id="bass staff">bass staff</strong>.
+Notes for this position are writter on the <span id="Alfred Basic Piano Course I-Do Position-Left Hand Do Position-bass staff"></span><strong id="bass staff">bass staff</strong>.
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/left_hand_c_position_score.png" alt="Left Hand C Position Score" style="width:600px;">
+<img src="https://albamr09.github.io/public/assets/left_hand_c_position_score.png" alt="Left Hand Do Position Score" style="width:600px;">
 </p>
 
-<div id="Alfred Basic Piano Course I-G Position"><h2 id="G Position" class="header"><a href="#Alfred Basic Piano Course I-G Position">G Position</a></h2></div>
+<div id="Alfred Basic Piano Course I-Sol Position"><h2 id="Sol Position" class="header"><a href="#Alfred Basic Piano Course I-Sol Position">Sol Position</a></h2></div>
 
 <p>
-Until ncw you have played only in the C POSITION. Now you will move to the G POSITION:
+Until now you have played only in the Do POSITION. Now you will move to the Sol POSITION:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/g_position.png" alt="G Position Score" style="width:600px;">
+<img src="https://albamr09.github.io/public/assets/g_position.png" alt="Sol Position Score" style="width:600px;">
 </p>
 
 <div id="Alfred Basic Piano Course I-Notation"><h2 id="Notation" class="header"><a href="#Alfred Basic Piano Course I-Notation">Notation</a></h2></div>
@@ -389,28 +389,28 @@ Notes playes separately make a <span id="Alfred Basic Piano Course I-Intervals-M
 Notes played together make <span id="Alfred Basic Piano Course I-Intervals-Harmonic Interval-harmony"></span><strong id="harmony">harmony</strong>. We call the intervals between these notes <span id="Alfred Basic Piano Course I-Intervals-Harmonic Interval-harmonic intervals"></span><strong id="harmonic intervals">harmonic intervals</strong>.
 </p>
 
-<div id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in C Position"><h3 id="Melodic Intervals in C Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Intervals in C Position">Melodic Intervals in C Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in Do Position"><h3 id="Melodic Intervals in Do Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Intervals in Do Position">Melodic Intervals in Do Position</a></h3></div>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/melodic_intervals.png" alt="Melodic Intervals">
 </p>
 
-<div id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in C Position"><h3 id="Harmonic Intervals in C Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Harmonic Intervals in C Position">Harmonic Intervals in C Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in Do Position"><h3 id="Harmonic Intervals in Do Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Harmonic Intervals in Do Position">Harmonic Intervals in Do Position</a></h3></div>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/harmonic_intervals.png" alt="Harmonic Intervals">
 </p>
 
-<div id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in G Position"><h3 id="Melodic Intervals in G Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Intervals in G Position">Melodic Intervals in G Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Intervals-Melodic Intervals in Sol Position"><h3 id="Melodic Intervals in Sol Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Melodic Intervals in Sol Position">Melodic Intervals in Sol Position</a></h3></div>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/melodic_invtervals_g.png" alt="Melodic Intervals in G Position">
+<img src="https://albamr09.github.io/public/assets/melodic_invtervals_g.png" alt="Melodic Intervals in Sol Position">
 </p>
 
-<div id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in G Position"><h3 id="Harmonic Intervals in G Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Harmonic Intervals in G Position">Harmonic Intervals in G Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Intervals-Harmonic Intervals in Sol Position"><h3 id="Harmonic Intervals in Sol Position" class="header"><a href="#Alfred Basic Piano Course I-Intervals-Harmonic Intervals in Sol Position">Harmonic Intervals in Sol Position</a></h3></div>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/harmonic_invtervals_g.png" alt="Harmonic Intervals in G Position">
+<img src="https://albamr09.github.io/public/assets/harmonic_invtervals_g.png" alt="Harmonic Intervals in Sol Position">
 </p>
 
 <div id="Alfred Basic Piano Course I-Chords"><h2 id="Chords" class="header"><a href="#Alfred Basic Piano Course I-Chords">Chords</a></h2></div>
@@ -419,32 +419,32 @@ Notes played together make <span id="Alfred Basic Piano Course I-Intervals-Harmo
 A <span id="Alfred Basic Piano Course I-Chords-chord"></span><strong id="chord">chord</strong> is three or more notes played together. 
 </p>
 
-<div id="Alfred Basic Piano Course I-Chords-Chords in C Position"><h3 id="Chords in C Position" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position">Chords in C Position</a></h3></div>
+<div id="Alfred Basic Piano Course I-Chords-Chords in Do Position"><h3 id="Chords in Do Position" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Do Position">Chords in Do Position</a></h3></div>
 
-<div id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major"><h4 id="Do Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major">Do Major</a></h4></div>
+<div id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major"><h4 id="Do Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major">Do Major</a></h4></div>
 
 <p>
-The <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Sol"></span><strong id="Sol">Sol</strong>.
+The <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major-Do Major Chord"></span><strong id="Do Major Chord">Do Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major-Mi"></span><strong id="Mi">Mi</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major-Sol"></span><strong id="Sol">Sol</strong>.
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/c_major_chord.png" alt="The C Major Chord">
+<img src="https://albamr09.github.io/public/assets/c_major_chord.png" alt="The Do Major Chord">
 </p>
 
 <p>
-The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Do Major-Sol"></span><strong id="Sol">Sol</strong>.
+The \(\textbf{Sol}^7\) chord is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major-Si"></span><strong id="Si">Si</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Do Major-Sol"></span><strong id="Sol">Sol</strong>.
 </p>
 
-<div id="Alfred Basic Piano Course I-Chords-Chords in C Position-Sol7"><h4 id="Sol7" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position-Sol7">Sol7</a></h4></div>
+<div id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Sol7"><h4 id="Sol7" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Do Position-Sol7">Sol7</a></h4></div>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/sol_7_chord.png" alt="The Sol7 Chord">
 </p>
 
-<div id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major"><h4 id="Fa Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major">Fa Major</a></h4></div>
+<div id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Fa Major"><h4 id="Fa Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Do Position-Fa Major">Fa Major</a></h4></div>
 
 <p>
-The <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-Fa Major Chord"></span><strong id="Fa Major Chord">Fa Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-La"></span><strong id="La">La</strong>.
+The <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Fa Major-Fa Major Chord"></span><strong id="Fa Major Chord">Fa Major Chord</strong> is made of three notes: <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Fa Major-Do"></span><strong id="Do">Do</strong>, <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Fa Major-Fa"></span><strong id="Fa">Fa</strong> and <span id="Alfred Basic Piano Course I-Chords-Chords in Do Position-Fa Major-La"></span><strong id="La">La</strong>.
 </p>
 
 <p>
@@ -456,7 +456,7 @@ The <span id="Alfred Basic Piano Course I-Chords-Chords in C Position-Fa Major-F
 <div id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Sol Major"><h4 id="Sol Major" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Sol Position-Sol Major">Sol Major</a></h4></div>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/g_major_chord.png" alt="The G Major Chord">
+<img src="https://albamr09.github.io/public/assets/g_major_chord.png" alt="The Sol Major Chord">
 </p>
 
 <div id="Alfred Basic Piano Course I-Chords-Chords in Sol Position-Re7"><h4 id="Re7" class="header"><a href="#Alfred Basic Piano Course I-Chords-Chords in Sol Position-Re7">Re7</a></h4></div>
@@ -476,14 +476,14 @@ We know that the Do Major is composed of the following notes: Do, Mi, Sol. When 
 Root position of the Do major chord: Do (root), Mi, Sol.
 
 </li><li>
-First inversion: Mi, Sol, Do (E is the lowest note).
+First inversion: Mi, Sol, Do (Mi is the lowest note).
 
 </li><li>
-Second inversion: Sol, Do, Mi (G is the lowest note).
+Second inversion: Sol, Do, Mi (Sol is the lowest note).
 
 </li></ul>
 <p>
-<img src="https://albamr09.github.io/public/assets/c_major_g.png" alt="The C Major Chord on G Position">
+<img src="https://albamr09.github.io/public/assets/c_major_g.png" alt="The Do Major Chord on Sol Position">
 </p>
 </div>
   
