[CET] Add entry [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -52,6 +52,9 @@ Functions and Models
 </li><li>
 <a href="01_03.html">New Functions from Old Functions</a>
 
+</li><li>
+<a href="01_04.html">Exponential Functions</a>
+
 </li></ol>
 </li></ol>
 </div>
