--- a/src/Notes/Music/ABPCI/abpci.html
+++ b/src/Notes/Music/ABPCI/abpci.html
@@ -58,6 +58,9 @@
 <a href="abpci.html#Sol%20Position">Sol Position</a>
 
 </li><li>
+<a href="abpci.html#Middle%20Do%20Position">Middle Do Position</a>
+
+</li><li>
 <a href="abpci.html#Notation">Notation</a>
 
 <ul>
@@ -225,6 +228,16 @@ Until now you have played only in the Do POSITION. Now you will move to the Sol 
 <img src="https://albamr09.github.io/public/assets/g_position.png" alt="Sol Position Score" style="width:600px;">
 </p>
 
+<div id="Alfred Basic Piano Course I-Middle Do Position"><h2 id="Middle Do Position" class="header"><a href="#Alfred Basic Piano Course I-Middle Do Position">Middle Do Position</a></h2></div>
+
+<p>
+On this position the right hand is on Do Position, however the left hand is one key down from Sol Position, like so:
+</p>
+
+<p>
+So both thumbs are over the middle Do.
+</p>
+
 <div id="Alfred Basic Piano Course I-Notation"><h2 id="Notation" class="header"><a href="#Alfred Basic Piano Course I-Notation">Notation</a></h2></div>
 
 <div id="Alfred Basic Piano Course I-Notation-Quarter Notes and Half Notes"><h3 id="Quarter Notes and Half Notes" class="header"><a href="#Alfred Basic Piano Course I-Notation-Quarter Notes and Half Notes">Quarter Notes and Half Notes</a></h3></div>
@@ -280,7 +293,7 @@ Music has numbers at the beginning of a score called the <span id="Alfred Basic 
 <div id="Alfred Basic Piano Course I-Notation-Dynamic Signs"><h3 id="Dynamic Signs" class="header"><a href="#Alfred Basic Piano Course I-Notation-Dynamic Signs">Dynamic Signs</a></h3></div>
 
 <p>
-The signs that tell up how load or soft to play are called <span id="Alfred Basic Piano Course I-Notation-Dynamic Signs-dynamic signs"></span><strong id="dynamic signs">dynamic signs</strong>. For example:
+The signs that tell up how loud or soft to play are called <span id="Alfred Basic Piano Course I-Notation-Dynamic Signs-dynamic signs"></span><strong id="dynamic signs">dynamic signs</strong>. For example:
 </p>
 
 <p>
